fix(basic -3.7): Semicolon after properties

--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ li > input[type="text"] {
 
 /* Completed */
 #completed label {
+  /* text-decoration: line-through  */
   text-decoration: line-through;
   color: #888;
 }
