--- a/style.css
+++ b/style.css
@@ -40,6 +40,13 @@ ul {
   margin: 0;
   padding: 0px;
 }
+/* li, h3 {
+    list-style:none;
+} */
+li,
+h3 {
+  list-style: none;
+}
 
 button {
   outline: none;
